<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/fragment_certificates_certdetails_coursenr"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/fragment_certificates_certdetails_coursenr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_certificates_certdetails_coursenr"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/fragment_certificates_certdetails_stnr"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/fragment_certificates_certdetails_stnr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_certificates_certdetails_stnr"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/fragment_certificates_certdetails_date"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/fragment_certificates_certdetails_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_certificates_certdetails_date"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/fragment_certificates_certdetails_professor"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/fragment_certificates_certdetails_professor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_certificates_certdetails_professor"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/fragment_certificates_certdetails_hours"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/fragment_certificates_certdetails_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_certificates_certdetails_hours"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/fragment_certificates_certdetails_ects"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/fragment_certificates_certdetails_ects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_certificates_certdetails_ects"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/fragment_certificates_certdetails_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/fragment_certificates_certdetails_grade"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/fragment_certificates_certdetails_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fragment_certificates_certdetails_university"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/fragment_certificates_certdetails_course"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/fragment_certificates_certdetails_university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/fragment_certificates_certdetails_university"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>