<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/fragment_security_oldPWText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingTop="20dp"
        android:text="@string/activity_security_oldPW" />

    <EditText
        android:id="@+id/fragment_security_oldPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_security_oldPWText"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/fragment_security_newPW1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_security_oldPW"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingTop="10dp"
        android:text="@string/activity_security_newPW" />

    <EditText
        android:id="@+id/fragment_security_newPW1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_security_newPW1Text"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/fragment_security_newPW2Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_security_newPW1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingTop="10dp"
        android:text="@string/activity_security_newPWAgain" />

    <EditText
        android:id="@+id/fragment_security_newPW2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_security_newPW2Text"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/fragment_security_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_security_newPW2"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="15dp"
        android:drawableRight="@drawable/ic_button_change_pw"
        android:text="@string/activity_security_change" />

</RelativeLayout>