<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/application_fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <RelativeLayout
        android:id="@+id/activity_helpstart_layout"
        style="@style/activity_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_help_layout"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/activity_helpstart_img"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/help_start" />

        <TextView
            android:id="@+id/activity_helpstart_welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_helpstart_img"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/activity_help_startWelcomeText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_helpstart_welcomeText" >

            <TextView
                android:id="@+id/activity_helpstart_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/activity_help_startText"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </ScrollView>
    </RelativeLayout>

    <!-- Help MenuBar -->

    <RelativeLayout
        android:id="@+id/activity_help_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/help_menu_background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_help_checkbox"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/activity_help_skip"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/activity_help_skip"
                android:visibility="gone" />

            <Button
                android:id="@+id/activity_help_next"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/activity_help_next"
                android:visibility="gone" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/activity_help_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:checked="true"
            android:text="@string/activity_help_show" />
    </RelativeLayout>

</RelativeLayout>